[package]
name = "esolangs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[workspace]

members = [
    "boiler_plate",
    "brainfuck",
    "spyrodecimal",
    "barely",
]

[lib]
name = "boiler_plate"
path = "boiler_plate/src/lib.rs"


[[bin]]
name = "brainfuck"
path = "brainfuck/src/main.rs"

[[bin]]
name = "spyrodecimal"
path = "spyrodecimal/src/main.rs"

[[bin]]
name = "barely"
path = "barely/src/main.rs"
